# live_reminder_bot_public

./: Cargo.toml  Procfile  README.md  app.json
src/: main.rs  model.rs
