[package]
name = "live_reminder_bot_server"
version = "0.1.5"
authors = ["Rail Khamitov <mshassium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7.0"
tokio = { version = "0.2", features = ["macros","fs"]}
futures = "0.3.5"
#mongodb = "1.1.0-beta"
rand = "0.7.3"
job_scheduler = "1.2.1"
async-await = "0.2.1"
cpu-time = "1.0.0"
reqwest = "0.10.7"
serde_json = "1.0.57"
serde = "1.0.115"
tzdata = "0.4.1"
stoppable_thread = "0.2.1"
thread-control = "0.1.2"
chrono = "0.4.15"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["sync"]
